--- a/excerpts/templates/master.html
+++ b/excerpts/templates/master.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title> master </title>
-    
+    <link rel="stylesheet" href="public/css/main.css" />
 
     {% block scripts %}
-
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     {% endblock %}
 </head>
 <body>
