finishing db handlers and front end connections

--- a/excerpts/templates/home.html
+++ b/excerpts/templates/home.html
@@ -1,25 +1,140 @@
 {% extends "master.html" %}
 
 {% block body %}
-<h1> home </h1>
+<style>
+    .h-space {
+        position:relative;
+        display: inline-block;
+        width: 4em;
+        height: 1em;
+        line-height:1;
+    }
+</style>
+<div>
+    <div id="excerpt-details">
+        <span>There are {{ data.count }} excerpts available.</span>
+    </div>
+    <div>
+        <span>Which page do you want? (1 - {{ data.count }})</span>
+        <div>
+            <input id="page-num" type="number" value="1" min="1" max="{{ data.count }}" />
+            <button id="get-page">Get Excerpt</button>
+            <div class="h-space"></div>
+            <button id="save-page">Save Excerpt</button>
+            <div class="h-space"></div>
+            <button id="new-page">New Excerpt</button>
+        </div>
+        
+    </div>
+</div>
 <script src="public/js/lib/ckeditor/ckeditor.js"></script>
 
 <textarea id="editor" rows="10" cols="80"></textarea>
 <script>
-CKEDITOR.replace("editor");
-CKEDITOR.editorConfig = function (config) {
-    config.language = "en";
-    config.uiColor = "#ff0000";
-}; 
+(function() {
+var getPageEl= document.getElementById("get-page");
+var pageNumEl = document.getElementById("page-num");
+var savePageEl = document.getElementById("save-page");
+var newPageEl = document.getElementById("new-page");
 
+var editor = CKEDITOR.replace("editor");
+var __PAGE__ = pageNumEl.value;
+var url = new URL(window.location.href);
+var search = url.search.substr(1);
+var searchSplit = search.split("=");
+var queries = {};
+
+window.editor = editor;
+getPageEl.addEventListener("click", function (event) {
+    loadPage(pageNumEl.value);
+});
+
+savePageEl.addEventListener("click", function (event) {
+    savePage();
+});
+
+newPageEl.addEventListener("click", function (event) {
+    $.ajax({
+        url:"new",
+        type:"GET",
+        success: function (data, status, jqXHR) {
+            window.location.href = window.location.protocol + "//" + window.location.hostname + window.location.pathname + "?page=" + data;
+                }
+    });
+});
+
+if (document.readyState === "interactive" || 
+    document.readyState === "ready" || 
+    document.readyState === "complete" ) 
+{
+    init();
+} else { document.addEventListener("DOMContentLoaded", init); }
+
+
+function init () {
+    for (var i=0; i<searchSplit.length; i=2*(i+1)) {
+        queries[searchSplit[i]] = searchSplit[i+1];
+    }
+    if (queries.page) {
+        window.setTimeout(function() {
+            loadPage(queries.page)
+        },777); // editor isn't ready for whatever reason and provides no callback
+    }
+}
 function getText () {
     var data = CKEDITOR.instances.editor.getData();
     console.log(data);
     return data;
 }
 
+function getPage (pageNum, callback) {
+    __PAGE__ = pageNum;
+    $.ajax({
+        url:"get",
+        type:"POST",
+        contentType:"application/json",
+        data:JSON.stringify({
+            page: pageNum
+        }),
+        success: function (data, status, jqXHR) {
+            if (jqXHR.status === 202) {
+                alert ("Excerpt doesn't exist.");
+            } else {
+                callback && callback(data);
+            }
+        }
+    });
+    return null;
+}
+
+function savePage (callback) {
+    var pageNum = __PAGE__;
+    $.ajax({
+        url:"save",
+        type:"POST",
+        contentType:"application/json",
+        data:JSON.stringify({
+            pageNum: __PAGE__,
+            contents: editor.getData()
+        }),
+        success: function (data, status, jqXHR) {
+            callback && callback(data);
+            alert("saved");
+        }
+    });
+}
+
+function loadPage (pageNum) {
+    pageNumEl.value = pageNum;
+    getPage(pageNum, function(data) {
+        editor.setData("", {
+            callback: function () {
+                editor.insertHtml(data.excerpt)
+            }
+        });
+    });
+}
+
+})();
 </script>
-<button onclick="getText();">Get Text</button>
 {% endblock %}
-
-
