blocking the title

--- a/excerpts/templates/home.html
+++ b/excerpts/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "master.html" %}
+{% block title %}
+    <title>excerpts</title>
+{% endblock %}
 
 {% block body %}
 <style>
@@ -35,6 +38,7 @@
             <div class="h-space"></div>
             <button id="new-page">New Excerpt</button>
             <div></div>
+            <div class="h-space"></div>
             <button id="delete-page">DELETE Excerpt</button>
         </div>
     </div>
