--- a/excerpts/templates/master.html
+++ b/excerpts/templates/master.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title> master </title>
+    {% block title %}<title> master </title>{% endblock %}
     <link rel="stylesheet" href="public/css/main.css" />
 
     {% block scripts %}
